--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,3 +10,26 @@
 .indexArticle img {
   display: none;
 }
+
+.ReactModal__Overlay {
+  z-index: 10000;
+  background: rgba(0,0,0,.25) !important;
+}
+
+*:focus {
+  outline: none;
+}
+
+.ais-PoweredBy {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  font-size: 0.75rem;
+}
+
+.ais-PoweredBy svg {
+  height: 18px;
+}
+.ais-PoweredBy-text {
+  margin-left: 10px;
+}
