--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -29,7 +29,18 @@
 
 .ais-PoweredBy svg {
   height: 18px;
+  margin-left: -10px;
+  margin-right: -10px;
 }
 .ais-PoweredBy-text {
   margin-left: 10px;
+}
+
+.ais-Hits-list {
+  margin-left: 0px;
+}
+
+.stop-scrolling {
+  height: 100%;
+  overflow: hidden;
 }
