--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,7 +13,7 @@
 
 .ReactModal__Overlay {
   z-index: 10000;
-  background: rgba(0,0,0,.25) !important;
+  background: rgba(0, 0, 0, 0.25) !important;
 }
 
 *:focus {
@@ -43,4 +43,8 @@
 .stop-scrolling {
   height: 100%;
   overflow: hidden;
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
